--- a/style.css
+++ b/style.css
@@ -49,6 +49,15 @@
     margin-top: 16px;
     justify-content: center;
   }
+
+  & #hero-slider {
+    height: 380px;
+  }
+
+  & img {
+    height: initial;
+    width: 100%;
+  }
 }
 
 .a-barnearia-section {
@@ -114,6 +123,19 @@
 
     z-index: -20;
   }
+  /* RESPONSIVE TABLET */
+
+  @media (min-width: 768px) {
+    & [role="mask"] {
+      width: 620px;
+      height: 620px;
+      right: -100px;
+    }
+
+    & .card {
+      width: 370px;
+    }
+  }
 }
 
 .serviços-section {
@@ -151,6 +173,24 @@
     height: 140%;
     transform: scaleX(-1);
   }
+
+  @media (min-width: 768px) {
+    padding: 64px;
+
+    & [role="mask"] {
+      width: 180px;
+      height: 360px;
+      border-radius: 8px;
+    }
+
+    & article {
+      justify-content: center;
+    }
+
+    & article a {
+      margin-top: 20px;
+    }
+  }
 }
 
 .contato-section {
@@ -171,13 +211,45 @@
     background-color: color-mix(in srgb, #128c7e 100%, white 20%);
     color: var(--tom-1);
   }
-}
 
-.unidade-section {
-  height: fit-content;
+  /* RESPONSIVE TABLET */
 
-  & .map {
-    margin: 0 auto;
+  @media (min-width: 768px) {
+    justify-content: space-around !important;
+
+    & [role="mask"] {
+      height: 400px;
+    }
+
+    & .buttons-spacer {
+      flex-direction: row;
+      gap: 16px;
+    }
+  }
+
+
+  .unidades-section {
+    height: fit-content;
+    padding: 64px 0;
+
+    & .map {
+      margin: 0 auto;
+    }
+
+    & p {
+      margin: 16px 32px;
+    }
+    & swiper-slide:not(.swiper-slide-active) {
+      transform: scale(0.9);
+    }
+
+    @media (min-width: 768px) {
+      padding-bottom: 128px;
+
+      & p {
+        margin: 64px 128px;
+      }
+    }
   }
 }
 
@@ -185,6 +257,10 @@
 /* COMPONENTES*/
 /* ********** */
 /* código que será reutilizado em todo o website */
+
+main {
+  overflow: hidden;
+}
 
 /*Título*/
 
@@ -202,7 +278,8 @@
 section,
 dialog {
   width: 100%;
-
+max-width: 1024px;
+margin: 0 auto;
   /* Smallest View Heigth */
   height: 100svh;
 
@@ -210,7 +287,11 @@ dialog {
 
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  position: relative;
+
+  @media (min-width: 768px) {
+    padding: 64px;
+  }
 }
 
 /* PARÁGRAFO*/
@@ -257,20 +338,7 @@ div[role="mask"] {
   filter: drop-shadow(0px 24px 34px rgba(0, 0, 0, 0.25));
 }
 /* seção */
-section {
-  width: 100%;
 
-  /* Smallest View Heigth */
-  height: 100svh;
-
-  padding: 64px 32px;
-
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-
-  position: relative;
-}
 
 /* Botão */
 [role="button"],
@@ -386,15 +454,15 @@ button {
 footer {
   color: white;
   & [role="logo"] {
-    width: 32px;
-    height: 32px;
+    width: 64px;
+    height: 64px;
 
     background-color: white;
   }
 
   & div:has(nav) {
     background-color: var(--tom-3);
-    padding: 16px 32px;
+    padding: 48px 32px;
   }
 
   & div:has(p) {
@@ -420,8 +488,13 @@ footer {
   & a:hover {
     color: var(--tom-1);
   }
-}
 
+  @media (min-width: 768px) {
+    & div:has(nav) {
+padding: 64px;
+  }
+}
+}
 dialog {
   color: #fff;
 
@@ -431,13 +504,15 @@ dialog {
   font-weight: 500;
   line-height: normal;
 
+  max-width: 100%;
+  max-height: 100%;
   border: 0;
 
-  background-color: rgba(0, 0, 0, 0.20);
+  background-color: rgba(0, 0, 0, 0.2);
 
   position: fixed;
   top: 0;
-  
+
   & [role="logo"] {
     width: 96px;
     height: 96px;
@@ -447,13 +522,14 @@ dialog {
     text-align: right;
   }
 
-& a, svg {
-  color: white;
-  text-decoration: none;
-}
+  & a,
+  svg {
+    color: white;
+    text-decoration: none;
+  }
 }
 
-nav.main{
+nav.main {
   width: 100%;
 
   padding: 24px 32px;
@@ -471,17 +547,21 @@ nav.main{
   & svg {
     color: white;
   }
+
 }
 
 dialog[open] + nav.main {
   margin-top: -96px;
 }
- 
+
 swiper-container {
   width: 100%;
   height: 100%;
 }
- 
+
+swiper-slide {
+  transition: transform 500ms;
+}
 
 /* *********** */
 /* utilitarios */
