--- a/a-barbearia/style.css
+++ b/a-barbearia/style.css
@@ -1,34 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap");
 /* Palheta de cores */
- 
+
 /* ***** */
 /* BASE */
 /* ***** */
 /* código que define layout, espaçamento e alinhamento do website*/
- 
+
 :root {
   --primaria: #e6b07e;
   --secundaria: #665e57;
   --tom-1: #ead8c7;
   --tom-2: #b38962;
   --tom-3: #664e38;
- 
+
   background-color: var(--tom-1);
-  scroll-behavior: smooth;
 }
- 
+
 .hero {
   justify-content: space-around;
- 
+
   & paragrafo-hero {
     width: 272px;
-    align-self: center;
+    
   }
- 
+
   & header {
     align-items: center;
     display: flex;
- 
+
     & .logo-hero {
       /* Posicionamento absoluto:width:
   equivalente a ignorar auto layout;
@@ -46,38 +45,33 @@
     color: var(--tom-3);
     font-weight: 800;
   }
- 
+
   & #hero-slider {
     margin-top: 16px;
     justify-content: center;
   }
- 
-  /* tablet */
-  @media (min-width: 768px) {
-    padding: 64px;
- 
-    & #hero-slider {
-      height: 380px;
-    }
-    & img {
-      height: initial;
-      width: 100%;
-    }
+
+  & #hero-slider {
+    height: 380px;
   }
- 
+
+  & img {
+    height: initial;
+    width: 100%;
+  }
   @media (min-width: 1024px) {
     & #header-mask-spacer {
       width: 80%;
       margin: 0 auto;
     }
- 
+
     & [role="mask"] {
       height: 50vh !important;
     }
   }
 }
- 
-.a-barbearia-section {
+
+.a-barnearia-section {
   justify-content: space-between;
   & .card {
     width: 270px;
@@ -85,42 +79,42 @@
     flex-direction: column;
     gap: 32px;
     padding: 8px 12px 0px 0px;
- 
+
     border-top: 3px;
     border-right: 3px;
     border-left: 0px;
     border-bottom: 0px;
- 
+
     border-style: solid;
- 
+
     background-color: var(--tom-1);
- 
+
     border-image-source: linear-gradient(
       30deg,
       var(--tom-1) 60%,
       var(--tom-3) 100%
     );
     border-image-slice: 1;
- 
+
     & p {
       margin: 0;
     }
   }
- 
+
   & [role="mask"] {
     width: 420px;
     height: 420px;
     border-radius: 100%;
     align-items: center;
- 
+
     position: absolute;
     z-index: -10;
- 
+
     & img {
       width: 100%;
     }
   }
- 
+
   & img {
     height: 100%;
   }
@@ -128,34 +122,36 @@
     color: var(--tom-3);
     font-weight: 800;
   }
- 
+
   & #hero-slider {
     margin-top: 16px;
   }
- 
+
   & .bolinhas {
     position: absolute;
- 
+
     left: 0;
- 
+
     z-index: -20;
   }
- 
+  /* RESPONSIVE TABLET */
+
   @media (min-width: 768px) {
     & [role="mask"] {
       width: 520px;
       height: 520px;
       right: -100px;
     }
+
     & .card {
       width: 370px;
     }
- 
+
     & .card {
       width: 570px;
     }
   }
- 
+
   @media (min-width: 1024px) {
     & .card {
       border-image-source: linear-gradient(
@@ -164,31 +160,199 @@
         var(--tom-3) 100%
       );
     }
+
     & .bolinhas {
       width: 400px;
       height: 400px;
     }
   }
 }
+
+.serviços-section {
+  padding: 64px 0px;
+  & .bolinhas {
+    width: 270px;
+    height: 48px;
+  }
+
+  & h2 {
+    color: var(--Cor-3, #664e38);
+    font-family: "Source Serif 4";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 108%; /* 21.6px */
+    letter-spacing: -1.6px;
+  }
+  & article {
+    width: 40%;
+    margin-right: 32px;
+  }
+  & article p {
+    text-align: center;
+  }
+
+
+
+  & [role="mask"] {
+    width: 165px;
+    height: 320px;
+    flex-shrink: 0;
+    border-radius: 0px 8px 8px 0px;
+  }
+
+  & [role="mask"] img {
+    height: 140%;
+    transform: scaleX(-1);
+  }
+
+  /* Tablet */
+
+  @media (min-width: 768px) {
+    padding: 64px;
+
+    & [role="mask"] {
+      width: 180px;
+      height: 360px;
+      border-radius: 8px;
+    }
+
+    & article {
+      justify-content: center;
+    }
+
+    & article a {
+      margin-top: 20px;
+    }
+
+    @media (min-width: 768px) {
+      & .mask-article-spacer {
+
+        justify-content: center;
+
+      }
+
+      & [role="mask"] {
+        position: absolute;
+        left: 0;
+
+        transform: scale(1.4);
+
+        translate: 0 -50%;
+        top: 50%
+      }
+
+      & article {
+        margin-right: 0;
+
+      };
+
+    }
+  }
+}
+
+
+.contato-section {
+  padding: 64px 16px;
+
+  & h1 {
+    margin: 0px 16px;
+
+    & .buttons-spacer {
+      margin: 0px 16px;
+    }
+  }
+
+  & a {
+    width: 100%;
+  }
+  & .whatsapp-link {
+    background-color: color-mix(in srgb, #128c7e 100%, white 20%);
+    color: var(--tom-1);
+  }
+
+
+  /* RESPONSIVE TABLET */
+
+  @media (min-width: 768px) {
+    justify-content: space-around !important;
+
+    & [role="mask"] {
+      height: 400px;
+    }
+
+    & .buttons-spacer {
+      flex-direction: row;
+      gap: 16px;
+    }
+  }
+  
+  & [roçe="mask"] {
+    height: 50vh;
+    max-width: 80%;
+    margin: 0 auto;
+}
+
+  .unidades-section {
+    height: fit-content;
+    padding: 64px 0;
+
+    & .map {
+      margin: 0 auto;
+    }
+
+    & p {
+      margin: 16px 32px;
+    }
+    & swiper-slide:not(.swiper-slide-active) {
+      transform: scale(0.9);
+    }
+
+    @media (min-width: 768px) {
+      padding-bottom: 128px;
+
+      & p {
+        margin: 64px 128px;
+      }
+
+      @media (min-width: 1024) {
+        & p {
+          margin: 64px auto;
+          max-width: 50%;
+        }
+
+        & swiper-container {
+          width: 100vw;
+          position: relative;
+          translate: -50% 0;
+          left: 50%;
+        }
+      }
+    }
+  }
+}
+
 /* ********** */
 /* COMPONENTES*/
 /* ********** */
 /* código que será reutilizado em todo o website */
+
 main {
   overflow: hidden;
 }
+
 /*Título*/
- 
+
 [role="logo"] {
   width: 160px;
   height: 160px;
- 
+
   background-color: black;
- 
+
   mask: url("public/logo.svg") no-repeat center;
   mask-size: 100%;
 }
- 
+
 /* seção */
 section,
 dialog {
@@ -197,39 +361,38 @@ dialog {
   margin: 0 auto;
   /* Smallest View Heigth */
   height: 100svh;
- 
+
   padding: 64px 32px;
- 
+
   display: flex;
   flex-direction: column;
- 
   position: relative;
- 
+
+  @media (min-wisth: 768px) {
+    padding: 96px;
+  }
+
   @media (min-width: 768px) {
     padding: 64px;
   }
- 
-  @media (min-width: 1024px) {
-    padding: 96px;
-  }
 }
- 
+
 /* PARÁGRAFO*/
- 
+
 p {
   font-size: 16px;
   font-family: "Source Serif 4";
   opacity: 0.65;
- 
+
   &.text-justify {
     text-align: justify;
- 
+
     &.text-sn {
       font-size: 16px;
     }
   }
 }
- 
+
 /* Titulo barbearia vanguarda estilizado */
 h1 {
   color: var(--secundaria);
@@ -241,40 +404,41 @@ h1 {
   margin: 0%;
   text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.25);
 }
- 
+
 /* ******* */
 /* MASCARA */
 /* ******* */
- 
+
 div[role="mask"] {
   width: 100%;
   height: 260px;
   border-radius: 8px;
   display: flex;
   justify-content: 0;
- 
+
   overflow: hidden;
- 
+
   filter: drop-shadow(0px 24px 34px rgba(0, 0, 0, 0.25));
 }
- 
+/* seção */
+
 /* Botão */
 [role="button"],
 button {
   /* Layout */
- 
+
   width: fit-content;
   display: inline-flex;
   padding: 7px 29px;
   align-items: center;
   gap: 10px;
   flex-wrap: wrap;
- 
+
   /* Estilo*/
   border-radius: 8px;
   background: color-mix(in srgb, var(--tom-2) 100%, white 20%);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
- 
+
   /* Tipografia*/
   color: var(--Cor-3, #664e38);
   font-family: Exo;
@@ -284,72 +448,71 @@ button {
   line-height: normal;
   letter-spacing: -1.28px;
   text-decoration: none;
- 
+
   -webkit-tap-highlight-color: transparent; /* Removes tap highligth on color*/
   transition: all 150ms;
- 
+
   &:hover {
     background: color-mix(in srgb, var(--tom-2) 100%, black 20%);
     color: (var(--tom-1));
   }
- 
+
   &:active {
     background: color-mix(in srgb, var(--tom-2) 100%, white 40%);
   }
 }
- 
+
 .bolinhas {
   width: 300px;
   height: 300px;
- 
+
   background-color: var(--tom-3);
   mask: url(public/bolinhas.svg) no-repeat center;
   mask-size: 100%;
- 
+
   &.fileira {
     mask: url(public/fileira-de-bolinhas.svg) no-repeat center;
     mask-size: 100%;
   }
 }
- 
+
 .whatsapp-icon {
   width: 24px;
   height: 24px;
- 
+
   background-color: currentColor;
   mask: url(public/whatsapp.svg) no-repeat center;
   mask-size: 100%;
 }
- 
+
 & .map {
   width: fit-content;
- 
   background-color: var(--secundaria);
   border-radius: 8px;
- 
+
   border: 4px SOLID var(--secundaria);
   overflow: hidden;
- 
+
   & .map-mask {
     width: 272px;
     height: 156px;
     flex-shrink: 0;
- 
+
     overflow: hidden;
- 
+
     & img {
       width: 100%;
     }
   }
- 
+
   & address {
     padding: 8px;
   }
- 
+
   & h2 {
     margin: 0;
     color: #fff;
- 
+
     font-family: Exo;
     font-size: 20px;
     font-style: normal;
@@ -357,11 +520,11 @@ button {
     line-height: 108%; /* 21.6px */
     letter-spacing: -1.6px;
   }
- 
+
   & h3 {
     margin: 0;
     color: #fff;
- 
+
     font-family: Exo;
     font-size: 12px;
     font-style: normal;
@@ -370,37 +533,25 @@ button {
     letter-spacing: -0.96px;
   }
 }
- 
-@media (min-width: 768px) {
-  & .map-mask {
-    width: 372px;
-    height: 256px;
-  }
-}
- 
-/* rodape footer */
 footer {
   color: white;
   & [role="logo"] {
     width: 64px;
     height: 64px;
- 
+
     background-color: white;
   }
- 
+
   & div:has(nav) {
     background-color: var(--tom-3);
     padding: 48px 32px;
   }
- 
+
   & div:has(p) {
     padding: 12px 0;
     background-color: color-mix(in srgb, var(--tom-3) 100%, black 40%);
   }
- 
-  & a {
-    font-size: 12px !important;
-  }
+
   & p,
   a {
     color: #fff;
@@ -409,168 +560,150 @@ footer {
     font-style: normal;
     font-weight: 400;
     line-height: normal; /* 8 px */
- 
+
     margin: 0;
     opacity: 100;
     text-decoration: none;
- 
+
     transition: all 150ms;
   }
   & a:hover {
     color: var(--tom-1);
   }
- 
+
   @media (min-width: 768px) {
     & div:has(nav) {
       padding: 64px;
-    }
   }
+  }
+  
   @media (min-width: 768px) {
     max-width: 1024px;
     margin: 0 auto;
     border-radius: 16px 16px 0 0;
     overflow: hidden;
- 
+
     & [role="logo"] {
       width: 96px;
       height: 96px;
     }
+    & div:has(nav) {
+      padding: 64px;
+    }
   }
 }
- 
 dialog {
   color: #fff;
- 
+
   font-family: Exo;
   font-size: 32px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
- 
+
   max-width: 100%;
   max-height: 100%;
- 
   border: 0;
-  margin: 0;
-  background-color: rgba(0, 0, 0, 0.4);
+
+  background-color: rgba(0, 0, 0, 0.2);
+
   position: fixed;
   top: 0;
-  opacity: 0;
-  transition: all 300ms allow-distrete;
- 
-  &[open] {
-    opacity: 1;
- 
-    @starting-style {
-      opacity: 0;
-    }
-  }
- 
+
   & [role="logo"] {
     width: 96px;
     height: 96px;
   }
- 
+
   & nav {
     text-align: right;
   }
- 
-& a{
-  cursor: pointer;
-}
- 
+
   & a,
   svg {
     color: white;
     text-decoration: none;
   }
 }
- 
+
 nav.main {
   width: 100%;
- 
+
   padding: 24px 32px;
   position: fixed;
   top: 0;
   z-index: 100;
   mix-blend-mode: difference;
- 
-  transition: margin-top 1s;
- 
+
   & [role="logo"] {
     width: 48px;
     height: 48px;
     background-color: white;
   }
- 
+
   & svg {
     color: white;
   }
 }
- 
+
 dialog[open] + nav.main {
   margin-top: -96px;
 }
- 
+
 swiper-container {
   width: 100%;
   height: 100%;
 }
- 
+
 swiper-slide {
-  display: flex;
-  justify-content: center;
-  align-items: center;
- 
   transition: transform 500ms;
 }
-  /* *********** */
+
+/* *********** */
 /* utilitarios */
 /* *********** */
- 
+
 .translate-y-center {
   translate: 0 -50%;
   top: 50%;
 }
- 
+
 .flex {
   display: flex;
 }
- 
+
 .flex-col {
   flex-direction: column;
 }
- 
+
 .items-center {
   align-items: center;
 }
- 
+
 .justify-center {
   justify-content: center;
 }
- 
+
 .justify-between {
   justify-content: space-between;
 }
- 
+
 .justify-around {
   justify-content: space-around;
 }
- 
+
 .gap-1 {
   gap: 4px;
 }
- 
+
 .gap-2 {
   gap: 8px;
 }
- 
+
 .gap-4 {
   gap: 16px;
 }
- 
+
 .gap-8 {
   gap: 32px;
 }
- 
- 
